--- a/chili.html
+++ b/chili.html
@@ -9,5 +9,27 @@
     </head>
     <body>
      <h1>Chili</h1>
+     <img src="chili.webp" alt="Bowl of Chili"</p>
+     <h3>Ingredients</h3>
+<li>
+<ul>1 pound ground beef </ul>
+<ul>¾ cup diced onion </ul>
+<ul>¾ cup diced celery</ul>
+<ul>¾ cup diced green bell pepper</ul>
+<ul>2 cloves garlic, minced</ul>
+<ul>2 (10.75 ounce) cans tomato puree</ul>
+<ul>1 (15 ounce) can kidney beans with liquid</ul>
+<ul>1 (15 ounce) can kidney beans, drained</ul>
+<ul>1 (15 ounce) can cannellini beans with liquid</ul>
+<ul>½ tablespoon chili powder</ul>
+<ul>1 teaspoon salt</ul>
+<ul>¾ teaspoon dried basil</ul>
+<ul>¾ teaspoon dried oregano</ul>
+<ul>½ teaspoon dried parsley</ul>
+<ul>¼ teaspoon ground black pepper</ul>
+<ul>⅛ teaspoon hot pepper sauce</ul>
+</li>
+
+
     </body>
 </html>
