--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     </head>
     <body>
       <h1>Odin Recipes</h1>
-      <a href="chili.html">Chili</a>
+      <p><a href="chili.html">Chili</a>
+
     </body>
 </html>
