--- a/chili.html
+++ b/chili.html
@@ -29,7 +29,12 @@
 <ul>¼ teaspoon ground black pepper</ul>
 <ul>⅛ teaspoon hot pepper sauce</ul>
 </li>
-
+<h5>Steps</h5>
+<li>
+<ol>Place beef in a skillet over medium heat and cook until evenly brown, 8 to 10 minutes. Drain grease.</ol> 
+<ol>Transfer beef to a slow cooker and mix in onion, celery, bell pepper, garlic, tomato puree, kidney beans, and cannellini beans. Season with chili powder, salt, basil, oregano, parsley, black pepper, and hot pepper sauce.</ol> 
+<ol>Cover and cook on Low for 8 hours.</ol>  
+</li>
 
     </body>
 </html>
