minor formating changes

--- a/chili.html
+++ b/chili.html
@@ -10,8 +10,9 @@
     <body>
      <h1>Chili</h1>
      <img src="chili.webp" alt="Bowl of Chili"</p>
+     <p>This slow cooker chili is packed with beans, veggies, and spices. The crockpot is a great way to make this beefy chili.</p>
      <h3>Ingredients</h3>
-<li>
+
 <ul>1 pound ground beef </ul>
 <ul>¾ cup diced onion </ul>
 <ul>¾ cup diced celery</ul>
@@ -28,13 +29,13 @@
 <ul>½ teaspoon dried parsley</ul>
 <ul>¼ teaspoon ground black pepper</ul>
 <ul>⅛ teaspoon hot pepper sauce</ul>
-</li>
-<h5>Steps</h5>
-<li>
-<ol>Place beef in a skillet over medium heat and cook until evenly brown, 8 to 10 minutes. Drain grease.</ol> 
-<ol>Transfer beef to a slow cooker and mix in onion, celery, bell pepper, garlic, tomato puree, kidney beans, and cannellini beans. Season with chili powder, salt, basil, oregano, parsley, black pepper, and hot pepper sauce.</ol> 
-<ol>Cover and cook on Low for 8 hours.</ol>  
-</li>
+
+<h4>Steps</h4>
+
+<ol>1. Place beef in a skillet over medium heat and cook until evenly brown, 8 to 10 minutes. Drain grease.</ol> 
+<ol>2. Transfer beef to a slow cooker and mix in onion, celery, bell pepper, garlic, tomato puree, kidney beans, and cannellini beans. Season with chili powder, salt, basil, oregano, parsley, black pepper, and hot pepper sauce.</ol> 
+<ol>3. Cover and cook on Low for 8 hours.</ol>  
+
 
     </body>
 </html>
