--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title></title>
+        <title>Recipes</title>
        
     </head>
     <body>
       <h1>Odin Recipes</h1>
       <p><a href="chili.html">Chili</a>
-
+      <p><a href="roastedpotatoes.html">Roasted Potatoes</a>
+      <p><a href="babybackribs.html">Baby Back Ribs</a>
     </body>
 </html>
