--- a/chili.html
+++ b/chili.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         
-        <title></title>
+        <title>Chili</title>
      
     </head>
     <body>
