add last page and data

--- a/babybackribs.html
+++ b/babybackribs.html
@@ -15,14 +15,21 @@
 <ul>1 tablespoon olive oil </ul>
 <ul>1 tablespoon liquid smoke flavoring</ul>
 <ul>1 tablespoon brown sugar</ul>
+<ul>½ teaspoon salt</ul>
+<ul>½ teaspoon ground black pepper</ul>
+<ul>½ teaspoon garlic powder</ul>
+<ul>½ teaspoon onion powder</ul>
+<ul>½ teaspoon chili powder</ul>
+<ul>1 cup BBQ sauce</ul>
 
 
 <h4>Steps</h4>
 
-<ol>1. Preheat the air fryer to 400 degrees F (200 degrees C).</ol> 
-<ol>2. Wash and dry potatoes. Trim edges to make a flat surface on both ends.</ol> 
-<ol>3. Combine extra-virgin olive oil and salad dressing mix in a large bowl. Add potatoes and toss until potatoes are well coated. Place in a single layer into the air fryer basket. Cook in batches if necessary.</ol>  
-<ol>4. Air fry until potatoes are golden brown, 5 to 7 minutes. Flip potatoes and air fry for an additional 2 to 3 minutes. Season with salt and pepper.</ol> 
+<ol>1. Remove membrane from back of ribs and dry ribs with a paper towel. Cut rack into 4 pieces. Mix olive oil and liquid smoke in a small bowl and rub on both sides of the ribs</ol> 
+<ol>2. Combine brown sugar, salt, pepper, garlic powder, onion powder and chili powder in a bowl. Season both sides of the ribs generously with seasoning mix. Let ribs rest for 30 minutes to enhance the flavor.</ol> 
+<ol>3. Preheat an air fryer to 375 degrees F (190 degrees C).</ol>  
+<ol>4. Place ribs bone-side down in the air fryer basket, making sure they are not touching; cook in batches if necessary.</ol> 
+<ol>5. Cook for 15 minutes. Flip ribs over (meat-side down) and cook an additional 10 minutes. Remove ribs from air fryer and brush bone-side of ribs with 1/2 cup BBQ sauce. Place basket back in the air fryer and cook for 5 minutes. Flip ribs over, brush meat-side with remaining 1/2 cup BBQ sauce; cook an additional 5 minutes or until desired char is achieved.</ol> 
 
 </body>
 </html>
